--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,7 @@
             left: 50%;
             transform: translate(-50%,-50%);
             width: 600px;
+            max-width: 60%;
             padding: 40px;
             background : rgba(0,0,0,.7);
             box-sizing: border-box;
